# Jubako

./: Cargo.toml  README.md
.gemini/: instructions.md
docs/: README.md  book.toml
docs/adrs/: 0001-record-architecture-decisions.md  README.md
docs/architecture/: README.md
docs/architecture/01_system_context/: deployment.md  system-context.md
docs/architecture/02_components/: components.md  execution-units.md
docs/architecture/03_domain_and_data/: context-map.md  data-pipeline.md  domain-models.md  er-diagram.md
docs/architecture/04_behaviors/: event-flows.md  fault-tolerance.md  state-machines.md
docs/architecture/04_behaviors/sequences/: 01-authentication.md  02-core-business.md  03-async-processing.md
docs/src/: SUMMARY.md  architecture.md  global_hotkey.md  hierarchical_clipboard.md  introduction.md  specifications.md
src/: db.rs  main.rs
src/app/: clipboard.rs  mod.rs  platform.rs  update.rs  view.rs
